2009-01-22  Lluis Sanchez Gual  <lluis@novell.com>

	* MonoDevelop.Projects/ProjectService.cs:
	* MonoDevelop.Projects.Extensions/ItemPropertyCodon.cs:
	* MonoDevelop.Projects.Formats.MSBuild/MSBuildProjectHandler.cs: Added
	support for SkipEmpty in the serializer. When set to true for a
	property, if the element generated by the property is empty, it will
	not be serialized.

2009-01-20  Michael Hutchinson  <mhutchinson@novell.com>

	* MonoDevelop.Projects/PropertyBag.cs: Avoid doubly serialising nodes
	that have not been accessed and lazily deserialised. Prevents user
	data loss.

2009-01-20  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.Projects.Dom/ResolveResult.cs:
	* MonoDevelop.Projects.Dom/AbstractMember.cs: fixed "Bug 467409 - Bad
	code completion options".

2009-01-20  Lluis Sanchez Gual  <lluis@novell.com>

	* MonoDevelop.Projects.Dom.Parser/ProjectDom.cs: In GetInheritanceTree
	there is no need to resolve base types, since the type being queried
	is already resolved, so all types it references are also resolved.
	Added method for removing instantiated generic types from the cache.

	* MonoDevelop.Projects.Dom.Serialization/CodeCompletionDatabase.cs: When
	a generic type is updated, remove all instances of that type from the
	instantiated type cache.

2009-01-19  Lluis Sanchez Gual  <lluis@novell.com>

	* MonoDevelop.Projects.Dom/DomType.cs: In ToString, get the correct
	member count.

	* MonoDevelop.Projects.Dom.Serialization/DomTypeProxy.cs: Use correct
	binary operator for logic or.

	* MonoDevelop.Projects.Dom.Serialization/CodeCompletionDatabase.cs: Make
	sure instantiated types are created only for generic types. Should
	fix bug #467410.

2009-01-19  Lluis Sanchez Gual  <lluis@novell.com>

	* MonoDevelop.Projects.Formats.MSBuild/MSBuildFileFormat.cs: Fixed
	ReadToolsVersion. The version number wasn't properly read.

2009-01-15  Michael Hutchinson  <mhutchinson@novell.com>

	* MonoDevelop.Projects/Project.cs: Fix local copy path for external